[tool.poetry]
name = "nss"
version = "0.1.0"
description = ""
authors = ["Jayden E. <aedara@uw.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
kornia = "^0.7.1"
matplotlib = "^3.8.3"
pytorch-msssim = "^1.0.0"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
openexr = "^3.2.3"
imath = "^0.0.2"
tqdm = "^4.66.2"
wandb = "^0.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
